# QOSF_PROJECT

./: CMakeLists  INSTALL  README.md  qgates.cpp  qgates.h  qram.cpp  qram.h  qram.inl
examples/: CMakeLists.txt  deutch-jozsa.cpp  deutch.cpp  hw2.cpp  hw3.cpp  ssum.cpp
presentation/: cex.cpp  cpo.cpp  cpos.cpp  permute_down.cpp  presentation.tex  ramasm.s  ramasm2.s
qcpp2/: CMakeLists.txt  QGate.cc  QGate.h  QMachine.cc  QMeasurement.cc  StandardGates.cc  StandardGates.h  main.cpp  qcpp2.kdev4
qcpp2/.kdev4/: qcpp2.kdev4
qcpp2/old/: qcpp.cpp
qcpp3/: CMakeLists.txt  QGate.cc  QGate.h  QMachine.cc  QMeasurement.cc  QRegister.cc  StandardGates.cc  StandardGates.h  main.cpp
