add_executable(deutch deutch.cpp)
target_link_libraries(deutch qcpp)

add_executable(ssum ssum.cpp)
target_link_libraries(ssum qcpp)

add_executable(hw2 hw2.cpp)
target_link_libraries(hw2 qcpp)

add_executable(hw3 hw3.cpp)
target_link_libraries(hw3 qcpp)


add_executable(deutch-jozsa deutch-jozsa.cpp)
target_link_libraries(deutch-jozsa qcpp)
